Fix date input overflow on iOS WebKit; add favourite opponent description
Use appearance: none to strip native date chrome so input respects CSS
width on iOS (Edge/Safari). Add description to favourite opponent stat.

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,18 @@
   ::-webkit-scrollbar-thumb {
     @apply bg-pool-border rounded-full;
   }
+
+  input[type="date"],
+  input[type="datetime-local"],
+  input[type="time"] {
+    -webkit-appearance: none;
+    appearance: none;
+    display: block;
+    width: 100%;
+    min-width: 0;
+    max-width: 100%;
+    box-sizing: border-box;
+  }
 }
 
 @layer components {
